fix: adjust body margin to eliminate extra space at the top

--- a/src/index.css
+++ b/src/index.css
@@ -592,6 +592,7 @@ body {
   padding: 8px 0;
   background-clip: content-box;
   box-sizing: content-box;
+  margin-top: -8px;
   -webkit-tap-highlight-color: transparent;
 }
 
